--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "ts": "nodemon --exec ts-node src/index.ts",
     "dev": "npx tsc --build -w | nodemon build/src",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
-    "format": "prettier --write 'src/**/*.{ts,tsx}'"
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\""
   },
   "keywords": [],
   "author": "",
@@ -26,7 +28,8 @@
     "express": "^4.21.0",
     "express-basic-auth": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.19.1"
+    "prisma": "^5.19.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -34,13 +37,13 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
-    "@typescript-eslint/parser": "^8.6.0",
-    "eslint": "^9.10.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^3.1.5",
-    "prettier": "^3.3.3",
+    "prettier": "^2.8.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
