--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "volunpath-be",
   "version": "1.0.0",
-  "description": "",
+  "description": "REST API for Volunpath application",
   "main": "index.js",
   "scripts": {
+    "start": "node build/src",
+    "build": "rm -r build | npx tsc --build",
     "ts": "nodemon --exec ts-node src/index.ts",
     "dev": "npx tsc --build -w | nodemon build/src",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -29,6 +31,8 @@
     "express-basic-auth": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.19.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -37,6 +41,8 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.56.0",
