--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ JWT_EXPIRED_TIME=7200
 JWT_REFRESH_EXPIRED_TIME=2592000
 PRIVATE_KEY=
 PUBLIC_KEY=
+SUPABASE_URL=
+SUPABASE_KEY=
+SUPABASE_BUCKET_NAME=volunpath
