--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "@supabase/supabase-js": "^2.45.4",
     "@vercel/node": "^3.2.15",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
