--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.21.0",
     "express-basic-auth": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.15",
     "prisma": "^5.19.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -44,6 +45,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
+    "@types/nodemailer": "^6.4.16",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
