chore: disabled curl notification workflow

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ PUBLIC_KEY=
 SUPABASE_URL=
 SUPABASE_KEY=
 SUPABASE_BUCKET_NAME=volunpath
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_EMAIL=
+SMTP_APP_PASSWORD=
